--- a/data/themes/default/hypha.html
+++ b/data/themes/default/hypha.html
@@ -30,6 +30,7 @@
               <h1 id="pagename"></h1>
             </div>
             <div id="langList"/>
+            <div id="tagList"/>
           </div>
           <div id="main" />
           <div id="pageEndCommands"></div>
